--- a/code/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/code/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -70,6 +70,8 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Speed
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Signal=S_TIM3_CH1
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
@@ -123,53 +125,53 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_USART2_UART_Init-USART2-false-LL-true,4-MX_TIM3_Init-TIM3-false-LL-true
 RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=80000000
+RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=40000000
-RCC.APB1TimFreq_Value=80000000
-RCC.APB2Freq_Value=80000000
-RCC.APB2TimFreq_Value=80000000
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=84000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=80000000
+RCC.CortexFreq_Value=84000000
 RCC.EthernetFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=84000000
 RCC.FLatency-AdvancedSettings=FLASH_LATENCY_2
-RCC.FMPI2C1Freq_Value=40000000
+RCC.FMPI2C1Freq_Value=42000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=80000000
+RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLN,PLLP,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=80000000
-RCC.PLLCLKFreq_Value=80000000
+RCC.MCO2PinFreq_Value=84000000
+RCC.PLLCLKFreq_Value=84000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLN=320
+RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
-RCC.PLLQCLKFreq_Value=160000000
-RCC.PLLRCLKFreq_Value=160000000
+RCC.PLLQCLKFreq_Value=168000000
+RCC.PLLRCLKFreq_Value=168000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=80000000
+RCC.PWRFreq_Value=84000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAIAFreq_Value=96000000
 RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=160000000
-RCC.SPDIFRXFreq_Value=160000000
-RCC.SYSCLKFreq_VALUE=80000000
+RCC.SDIOFreq_Value=168000000
+RCC.SPDIFRXFreq_Value=168000000
+RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=160000000
+RCC.USBFreq_Value=168000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=320000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
@@ -178,10 +180,11 @@ SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM3.Period=2-1
-TIM3.Prescaler=50-1
-TIM3.Pulse-PWM\ Generation1\ CH1=1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1
+TIM3.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_DISABLE
+TIM3.Period=2
+TIM3.Prescaler=34
+TIM3.Pulse-PWM\ Generation1\ CH1=2
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
