--- a/code/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/code/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -180,11 +180,13 @@ SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1,TIM_MasterOutputTrigger,ClockDivision
 TIM3.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_DISABLE
-TIM3.Period=2
-TIM3.Prescaler=34
-TIM3.Pulse-PWM\ Generation1\ CH1=2
+TIM3.Period=104
+TIM3.Prescaler=0
+TIM3.Pulse-PWM\ Generation1\ CH1=0
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
