--- a/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -4,6 +4,17 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH0=NONE
+GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
+GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0,TRIGGERPOLARITY_GPDMACH0
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
+GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
+GPDMA1.TRIGGERPOLARITY_GPDMACH0=DMA_TRIG_POLARITY_MASKED
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -11,25 +22,108 @@ Mcu.CPN=STM32U585VIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=CORTEX_M33_NS
-Mcu.IP1=ICACHE
-Mcu.IP2=LPBAM
-Mcu.IP3=LPBAMQUEUE
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=PWR
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IPNb=9
+Mcu.IP1=DEBUG
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=TIM2
+Mcu.IP13=TIM3
+Mcu.IP2=GPDMA1
+Mcu.IP3=ICACHE
+Mcu.IP4=LPBAM
+Mcu.IP5=LPBAMQUEUE
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=PWR
+Mcu.IP9=RCC
+Mcu.IPNb=14
 Mcu.Name=STM32U585VITx
 Mcu.Package=LQFP100
-Mcu.Pin0=VP_ICACHE_VS_ICACHE
-Mcu.Pin1=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin2=VP_PWR_VS_SECSignals
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_LPBAM_VS_SIG1
-Mcu.Pin5=VP_LPBAM_VS_SIG4
-Mcu.Pin6=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=7
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PC1
+Mcu.Pin11=PC2
+Mcu.Pin12=PC3
+Mcu.Pin13=PA1
+Mcu.Pin14=PA2
+Mcu.Pin15=PA3
+Mcu.Pin16=PA5
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
+Mcu.Pin19=PC4
+Mcu.Pin2=PE4
+Mcu.Pin20=PC5
+Mcu.Pin21=PB1
+Mcu.Pin22=PB2
+Mcu.Pin23=PE7
+Mcu.Pin24=PE8
+Mcu.Pin25=PE9
+Mcu.Pin26=PE10
+Mcu.Pin27=PE11
+Mcu.Pin28=PE12
+Mcu.Pin29=PE13
+Mcu.Pin3=PE5
+Mcu.Pin30=PE14
+Mcu.Pin31=PE15
+Mcu.Pin32=PB10
+Mcu.Pin33=PB12
+Mcu.Pin34=PB13
+Mcu.Pin35=PB14
+Mcu.Pin36=PB15
+Mcu.Pin37=PD8
+Mcu.Pin38=PD9
+Mcu.Pin39=PD10
+Mcu.Pin4=PE6
+Mcu.Pin40=PD11
+Mcu.Pin41=PD12
+Mcu.Pin42=PD13
+Mcu.Pin43=PD14
+Mcu.Pin44=PD15
+Mcu.Pin45=PC6
+Mcu.Pin46=PC7
+Mcu.Pin47=PC8
+Mcu.Pin48=PC9
+Mcu.Pin49=PA8
+Mcu.Pin5=PC13
+Mcu.Pin50=PA9
+Mcu.Pin51=PA10
+Mcu.Pin52=PA11
+Mcu.Pin53=PA12
+Mcu.Pin54=PA13 (JTMS/SWDIO)
+Mcu.Pin55=PA14 (JTCK/SWCLK)
+Mcu.Pin56=PA15 (JTDI)
+Mcu.Pin57=PC10
+Mcu.Pin58=PC11
+Mcu.Pin59=PC12
+Mcu.Pin6=PC14-OSC32_IN (PC14)
+Mcu.Pin60=PD0
+Mcu.Pin61=PD1
+Mcu.Pin62=PD2
+Mcu.Pin63=PD3
+Mcu.Pin64=PD4
+Mcu.Pin65=PD5
+Mcu.Pin66=PD6
+Mcu.Pin67=PD7
+Mcu.Pin68=PB3 (JTDO/TRACESWO)
+Mcu.Pin69=PB4 (NJTRST)
+Mcu.Pin7=PC15-OSC32_OUT (PC15)
+Mcu.Pin70=PB5
+Mcu.Pin71=PB6
+Mcu.Pin72=PB7
+Mcu.Pin73=PB8
+Mcu.Pin74=PB9
+Mcu.Pin75=PE0
+Mcu.Pin76=PE1
+Mcu.Pin77=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin78=VP_ICACHE_VS_ICACHE
+Mcu.Pin79=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin8=PH0-OSC_IN (PH0)
+Mcu.Pin80=VP_PWR_VS_SECSignals
+Mcu.Pin81=VP_SYS_VS_Systick
+Mcu.Pin82=VP_LPBAM_VS_SIG1
+Mcu.Pin83=VP_LPBAM_VS_SIG4
+Mcu.Pin84=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin9=PC0
+Mcu.PinsNb=85
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U585VITx
@@ -37,7 +131,13 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -46,6 +146,308 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=LED2OUT
+PA1.Signal=S_TIM2_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=COL24
+PA10.Locked=true
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=COL23
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=COL22
+PA12.Locked=true
+PA12.Signal=GPIO_Input
+PA13\ (JTMS/SWDIO).GPIOParameters=GPIO_Label
+PA13\ (JTMS/SWDIO).GPIO_Label=SWDIO
+PA13\ (JTMS/SWDIO).Mode=Serial_Wire
+PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).GPIOParameters=GPIO_Label
+PA14\ (JTCK/SWCLK).GPIO_Label=SWCLK
+PA14\ (JTCK/SWCLK).Mode=Serial_Wire
+PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=COL21
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPIO_Input
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=LED3OUT
+PA2.Signal=S_TIM2_CH3
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=LED4OUT
+PA3.Signal=S_TIM2_CH4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED1OUT
+PA5.Signal=S_TIM2_CH1
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ROW0
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=ROW1
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=COL26
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=COL25
+PA9.Locked=true
+PA9.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ROW4
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=ROW15
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=MEM1CS
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=SPI2SCK
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=SPI2MISO
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=SPI2MOSI
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=ROW5
+PB2.Locked=true
+PB2.Signal=GPIO_Input
+PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Label
+PB3\ (JTDO/TRACESWO).GPIO_Label=COL9
+PB3\ (JTDO/TRACESWO).Locked=true
+PB3\ (JTDO/TRACESWO).Signal=GPIO_Input
+PB4\ (NJTRST).GPIOParameters=GPIO_Label
+PB4\ (NJTRST).GPIO_Label=COL8
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=COL7
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=COL6
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=COL5
+PB7.Locked=true
+PB7.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=COL4
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=COL3
+PB9.Locked=true
+PB9.Signal=GPIO_Input
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=DEBUG1
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=DEBUG2
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=COL20
+PC10.Locked=true
+PC10.Signal=GPIO_Input
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=COL19
+PC11.Locked=true
+PC11.Signal=GPIO_Input
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=COL18
+PC12.Locked=true
+PC12.Signal=GPIO_Input
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=LDR2IN
+PC13.Locked=true
+PC13.Signal=GPXTI13
+PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
+PC14-OSC32_IN\ (PC14).GPIO_Label=LDR3IN
+PC14-OSC32_IN\ (PC14).Locked=true
+PC14-OSC32_IN\ (PC14).Signal=GPXTI14
+PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
+PC15-OSC32_OUT\ (PC15).GPIO_Label=LDR4IN
+PC15-OSC32_OUT\ (PC15).Locked=true
+PC15-OSC32_OUT\ (PC15).Signal=GPXTI15
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=DEBUG3
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=DEBUG4
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=ROW2
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=ROW3
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=COL30
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=COL29
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=COL28
+PC8.Locked=true
+PC8.Signal=GPIO_Input
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=COL27
+PC9.Locked=true
+PC9.Signal=GPIO_Input
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=COL17
+PD0.Locked=true
+PD0.Signal=GPIO_Input
+PD1.GPIOParameters=GPIO_Label
+PD1.GPIO_Label=COL16
+PD1.Locked=true
+PD1.Signal=GPIO_Input
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=OLED1CS
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=OLED2CS
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=OLEDDC
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=OLEDRES
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=RELAY
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=COL31
+PD15.Locked=true
+PD15.Signal=GPIO_Input
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=COL15
+PD2.Locked=true
+PD2.Signal=GPIO_Input
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=COL14
+PD3.Locked=true
+PD3.Signal=GPIO_Input
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=COL13
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=COL12
+PD5.Locked=true
+PD5.Signal=GPIO_Input
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=COL11
+PD6.Locked=true
+PD6.Signal=GPIO_Input
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=COL10
+PD7.Locked=true
+PD7.Signal=GPIO_Input
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=MEMHOLD
+PD8.Locked=true
+PD8.Signal=GPIO_Output
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=MEMW
+PD9.Locked=true
+PD9.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=COL2
+PE0.Locked=true
+PE0.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=COL1
+PE1.Locked=true
+PE1.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=ROW9
+PE10.Locked=true
+PE10.Signal=GPIO_Input
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=ROW10
+PE11.Locked=true
+PE11.Signal=GPIO_Input
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=ROW11
+PE12.Locked=true
+PE12.Signal=GPIO_Input
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=ROW12
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=ROW13
+PE14.Locked=true
+PE14.Signal=GPIO_Input
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=ROW14
+PE15.Locked=true
+PE15.Signal=GPIO_Input
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=COL0
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=ENCODER_A
+PE3.Signal=S_TIM3_CH1
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=ENCODER_B
+PE4.Signal=S_TIM3_CH2
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=ENCODER_SW
+PE5.Locked=true
+PE5.Signal=GPXTI5
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=LDR1IN
+PE6.Locked=true
+PE6.Signal=GPXTI6
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=ROW6
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=ROW7
+PE8.Locked=true
+PE8.Signal=GPIO_Input
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=ROW8
+PE9.Locked=true
+PE9.Signal=GPIO_Input
+PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
+PH0-OSC_IN\ (PH0).GPIO_Label=OSC_IN
+PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
+PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -78,44 +480,116 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,7-MX_TIM3_Init-TIM3-false-LL-true,8-MX_TIM2_Init-TIM2-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
+RCC.ADF1Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
+RCC.APB3Freq_Value=160000000
 RCC.CK48Freq_Value=48000000
 RCC.CRSFreq_Value=48000000
+RCC.CortexFreq_Value=160000000
 RCC.DACFreq_Value=32000
-RCC.EPOD_VALUE=4000000
-RCC.FDCANFreq_Value=258000000
+RCC.EPOD_VALUE=16000000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANFreq_Value=80000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=ADCFreq_Value,CK48Freq_Value,CRSFreq_Value,DACFreq_Value,EPOD_VALUE,FDCANFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MSI_VALUE,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2C4Freq_Value=160000000
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSIClockRange,MSI_VALUE,OCTOSPIMFreq_Value,PLL1R,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM2Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSIDIV_VALUE=32000
 RCC.LSI_VALUE=32000
-RCC.MSI_VALUE=4000000
-RCC.PLL2PoutputFreq_Value=258000000
-RCC.PLL2QoutputFreq_Value=258000000
-RCC.PLL2RoutputFreq_Value=258000000
-RCC.PLL3PoutputFreq_Value=258000000
-RCC.PLL3QoutputFreq_Value=258000000
-RCC.PLL3RoutputFreq_Value=258000000
-RCC.PLLPoutputFreq_Value=258000000
-RCC.PLLQoutputFreq_Value=258000000
-RCC.PLLRCLKFreq_Value=258000000
+RCC.MCO1PinFreq_Value=160000000
+RCC.MDF1Freq_Value=160000000
+RCC.MSIClockRange=RCC_MSIRANGE_0
+RCC.MSI_VALUE=48000000
+RCC.OCTOSPIMFreq_Value=160000000
+RCC.PLL1R=1
+RCC.PLL2PoutputFreq_Value=3096000000
+RCC.PLL2QoutputFreq_Value=3096000000
+RCC.PLL2RoutputFreq_Value=3096000000
+RCC.PLL3PoutputFreq_Value=3096000000
+RCC.PLL3QoutputFreq_Value=3096000000
+RCC.PLL3RoutputFreq_Value=3096000000
+RCC.PLLFRACN=0
+RCC.PLLN=10
+RCC.PLLPoutputFreq_Value=80000000
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=160000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.RNGFreq_Value=48000000
 RCC.SAESFreq_Value=48000000
-RCC.SAI1Freq_Value=258000000
-RCC.SAI2Freq_Value=258000000
-RCC.SDMMCFreq_Value=258000000
+RCC.SAI1Freq_Value=3096000000
+RCC.SAI2Freq_Value=3096000000
+RCC.SDMMCFreq_Value=80000000
+RCC.SPI1Freq_Value=160000000
+RCC.SPI2Freq_Value=160000000
+RCC.SPI3Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=160000000
+RCC.UART5Freq_Value=160000000
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
+RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=4000000
-RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=516000000
-RCC.VCOPLL2OutputFreq_Value=516000000
-RCC.VCOPLL3OutputFreq_Value=516000000
+RCC.VCOInput2Freq_Value=48000000
+RCC.VCOInput3Freq_Value=48000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=160000000
+RCC.VCOPLL2OutputFreq_Value=6192000000
+RCC.VCOPLL3OutputFreq_Value=6192000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=5.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,PeriodNoDither,Prescaler
+TIM2.PeriodNoDither=9
+TIM2.Prescaler=19
+VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
