--- a/firmware/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -243,4 +243,4 @@ VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
-isbadioc=false
+isbadioc=true
