Configure more pins on Nucleo

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -47,44 +47,48 @@ Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PA3
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PG2
-Mcu.Pin15=PC7
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
-Mcu.Pin2=PC13
-Mcu.Pin20=PA13 (JTMS/SWDIO)
-Mcu.Pin21=PA14 (JTCK/SWCLK)
-Mcu.Pin22=PA15 (JTDI)
-Mcu.Pin23=PD3
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PB5
-Mcu.Pin26=PB7
-Mcu.Pin27=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin28=VP_ICACHE_VS_ICACHE
-Mcu.Pin29=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin3=PC14-OSC32_IN (PC14)
-Mcu.Pin30=VP_PWR_VS_DBSignals
-Mcu.Pin31=VP_PWR_VS_SECSignals
-Mcu.Pin32=VP_PWR_VS_LPOM
-Mcu.Pin33=VP_PWR_Vdda
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_LPBAM_VS_SIG1
-Mcu.Pin37=VP_LPBAM_VS_SIG4
-Mcu.Pin38=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin4=PC15-OSC32_OUT (PC15)
-Mcu.Pin5=PC1
-Mcu.Pin6=PC2
-Mcu.Pin7=PA0
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=39
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PF13
+Mcu.Pin13=PF14
+Mcu.Pin14=PF15
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PG2
+Mcu.Pin19=PC7
+Mcu.Pin2=PE5
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13 (JTMS/SWDIO)
+Mcu.Pin25=PA14 (JTCK/SWCLK)
+Mcu.Pin26=PA15 (JTDI)
+Mcu.Pin27=PD3
+Mcu.Pin28=PB3 (JTDO/TRACESWO)
+Mcu.Pin29=PB5
+Mcu.Pin3=PE6
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin32=VP_ICACHE_VS_ICACHE
+Mcu.Pin33=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin34=VP_PWR_VS_DBSignals
+Mcu.Pin35=VP_PWR_VS_SECSignals
+Mcu.Pin36=VP_PWR_VS_LPOM
+Mcu.Pin37=VP_PWR_Vdda
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin4=PC14-OSC32_IN (PC14)
+Mcu.Pin40=VP_LPBAM_VS_SIG1
+Mcu.Pin41=VP_LPBAM_VS_SIG4
+Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin5=PC15-OSC32_OUT (PC15)
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PA0
+Mcu.Pin9=PA1
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -92,6 +96,11 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -172,11 +181,6 @@ PB7.Locked=true
 PB7.Signal=GPIO_Output
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
-PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=USER_BUTTON
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13.Locked=true
-PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -196,12 +200,34 @@ PC7.Locked=true
 PC7.Signal=GPIO_Output
 PD3.Mode=Full_Duplex_Master
 PD3.Signal=SPI2_MISO
-PE3.GPIOParameters=GPIO_PuPd
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=ENCODER_A
 PE3.GPIO_PuPd=GPIO_PULLUP
 PE3.Signal=S_TIM3_CH1
-PE4.GPIOParameters=GPIO_PuPd
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE4.GPIO_Label=ENCODER_B
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Signal=S_TIM3_CH2
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=ENCODER_SW
+PE5.Locked=true
+PE5.Signal=GPXTI5
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=LDR1IN
+PE6.Locked=true
+PE6.Signal=GPXTI6
+PF13.GPIOParameters=GPIO_Label
+PF13.GPIO_Label=LDR2IN
+PF13.Locked=true
+PF13.Signal=GPXTI13
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=LDR3IN
+PF14.Locked=true
+PF14.Signal=GPXTI14
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=LDR4IN
+PF15.Locked=true
+PF15.Signal=GPXTI15
 PG2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG2.GPIO_Label=LED_RED
 PG2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -312,6 +338,14 @@ RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
