--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -10,13 +10,18 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH0=NONE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0
+GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCDATAWIDTH_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCINC_GPDMACH0,DESTDATAWIDTH_GPDMACH0,TRANSFEREVENTMODE_LL_CIRCULAR_GPDMACH0,TRANSFERALLOCATEDPORTDEST_GPDMACH0,DATAHANDLING_GPDMACH0
+GPDMA1.LINKALLOCATEDPORT_CIRCULAR_GPDMACH0=DMA_LINK_ALLOCATED_PORT1
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
 GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
+GPDMA1.TRANSFERALLOCATEDPORTDEST_GPDMACH0=DMA_DEST_ALLOCATED_PORT0
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFEREVENTMODE_LL_CIRCULAR_GPDMACH0=DMA_TCEM_BLOCK_TRANSFER
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -112,7 +117,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=LED1OUT
 PA0.Signal=S_TIM2_CH1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=LED2OUT
 PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=USART1_RX
@@ -144,7 +153,11 @@ PA15\ (JTDI).GPIO_Label=UCPD1_CC1
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Mode=Sink_AllSignals
 PA15\ (JTDI).Signal=UCPD1_CC1
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=LED3OUT
 PA2.Signal=S_TIM2_CH3
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=LED4OUT
 PA3.Signal=S_TIM2_CH4
 PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=USART1_TX
@@ -369,9 +382,11 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither,PulseNoDither_1,TIM_MasterOutputTrigger
 TIM2.PeriodNoDither=9
 TIM2.Prescaler=19
+TIM2.PulseNoDither_1=0
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=8
 TIM3.IC2Filter=8
