Untested display driver revision, should work

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -10,18 +10,15 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
-GPDMA1.DATAHANDLING_GPDMACH0=NONE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCDATAWIDTH_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCINC_GPDMACH0,DESTDATAWIDTH_GPDMACH0,TRANSFEREVENTMODE_LL_CIRCULAR_GPDMACH0,TRANSFERALLOCATEDPORTDEST_GPDMACH0,DATAHANDLING_GPDMACH0
+GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0
 GPDMA1.LINKALLOCATEDPORT_CIRCULAR_GPDMACH0=DMA_LINK_ALLOCATED_PORT1
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
 GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
-GPDMA1.TRANSFERALLOCATEDPORTDEST_GPDMACH0=DMA_DEST_ALLOCATED_PORT0
 GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
-GPDMA1.TRANSFEREVENTMODE_LL_CIRCULAR_GPDMACH0=DMA_TCEM_BLOCK_TRANSFER
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -60,40 +57,44 @@ Mcu.Pin14=PF15
 Mcu.Pin15=PB13
 Mcu.Pin16=PB14
 Mcu.Pin17=PB15
-Mcu.Pin18=PG2
-Mcu.Pin19=PC7
+Mcu.Pin18=PD10
+Mcu.Pin19=PD11
 Mcu.Pin2=PE5
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13 (JTMS/SWDIO)
-Mcu.Pin25=PA14 (JTCK/SWCLK)
-Mcu.Pin26=PA15 (JTDI)
-Mcu.Pin27=PD3
-Mcu.Pin28=PB3 (JTDO/TRACESWO)
-Mcu.Pin29=PB5
+Mcu.Pin20=PD12
+Mcu.Pin21=PD13
+Mcu.Pin22=PG2
+Mcu.Pin23=PC7
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13 (JTMS/SWDIO)
+Mcu.Pin29=PA14 (JTCK/SWCLK)
 Mcu.Pin3=PE6
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin32=VP_ICACHE_VS_ICACHE
-Mcu.Pin33=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin34=VP_PWR_VS_DBSignals
-Mcu.Pin35=VP_PWR_VS_SECSignals
-Mcu.Pin36=VP_PWR_VS_LPOM
-Mcu.Pin37=VP_PWR_Vdda
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PA15 (JTDI)
+Mcu.Pin31=PD3
+Mcu.Pin32=PB3 (JTDO/TRACESWO)
+Mcu.Pin33=PB5
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin36=VP_ICACHE_VS_ICACHE
+Mcu.Pin37=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin38=VP_PWR_VS_DBSignals
+Mcu.Pin39=VP_PWR_VS_SECSignals
 Mcu.Pin4=PC14-OSC32_IN (PC14)
-Mcu.Pin40=VP_LPBAM_VS_SIG1
-Mcu.Pin41=VP_LPBAM_VS_SIG4
-Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_PWR_VS_LPOM
+Mcu.Pin41=VP_PWR_Vdda
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_LPBAM_VS_SIG1
+Mcu.Pin45=VP_LPBAM_VS_SIG4
+Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=43
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -211,6 +212,22 @@ PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=OLED1CS
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=OLED2CS
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=OLEDDC
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=OLEDRES
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD3.Mode=Full_Duplex_Master
 PD3.Signal=SPI2_MISO
 PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
