Circular works with HAL, doesn't work with LED driver yet

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -9,18 +9,38 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
-GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
-GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
-GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0
-GPDMA1.LINKALLOCATEDPORT_CIRCULAR_GPDMACH0=DMA_LINK_ALLOCATED_PORT1
-GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
-GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
-GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
-GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.IPParameters=LINKALLOCATEDPORT_GPDMACH0,LINKEDLISTMODE_GPDMACH0
+GPDMA1.LINKALLOCATEDPORT_GPDMACH0=DMA_LINK_ALLOCATED_PORT0
+GPDMA1.LINKEDLISTMODE_GPDMACH0=DMA_LINKEDLIST_CIRCULAR
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Linkedlist.MDMA_Channel0.GP_SW.0.BlkHWRequest=DMA_BREQ_SINGLE_BURST
+Linkedlist.MDMA_Channel0.GP_SW.0.DataHandling=NONE
+Linkedlist.MDMA_Channel0.GP_SW.0.DataSize=dma_buffer_size
+Linkedlist.MDMA_Channel0.GP_SW.0.DestBurstLength=1
+Linkedlist.MDMA_Channel0.GP_SW.0.DestDataWidth=DMA_DEST_DATAWIDTH_HALFWORD
+Linkedlist.MDMA_Channel0.GP_SW.0.DestInc=DMA_DINC_FIXED
+Linkedlist.MDMA_Channel0.GP_SW.0.Direction=DMA_MEMORY_TO_MEMORY
+Linkedlist.MDMA_Channel0.GP_SW.0.DstAddress=(uint32_t) &(TIM2->CCR1)
+Linkedlist.MDMA_Channel0.GP_SW.0.Instance=MDMA_Channel0
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_CIRCULARNODE=LEDMatrix_Node
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_MASTERDMA=GPDMA
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_NAME=LEDMatrix_Queue
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_TYPE=CIRCULAR
+Linkedlist.MDMA_Channel0.GP_SW.0.NODE_NAME=LEDMatrix_Node
+Linkedlist.MDMA_Channel0.GP_SW.0.RequestParameters=LL_NAME,LL_MASTERDMA,LL_TYPE,LL_CIRCULARNODE,NODE_NAME,BlkHWRequest,Requestforcodegen,Direction,SrcInc,DestInc,SrcDataWidth,DestDataWidth,SrcBurstLength,DestBurstLength,TransferAllocatedPortSrc,TransferEventMode,DataHandling,TriggerPolarity,SrcAddress,DstAddress,DataSize
+Linkedlist.MDMA_Channel0.GP_SW.0.Requestforcodegen=GPDMA1_REQUEST_TIM2_UP
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcAddress=dma_buffer_address
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcBurstLength=1
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcDataWidth=DMA_SRC_DATAWIDTH_HALFWORD
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcInc=DMA_SINC_FIXED
+Linkedlist.MDMA_Channel0.GP_SW.0.TransferAllocatedPortSrc=DMA_SRC_ALLOCATED_PORT1
+Linkedlist.MDMA_Channel0.GP_SW.0.TransferEventMode=DMA_TCEM_BLOCK_TRANSFER
+Linkedlist.MDMA_Channel0.GP_SW.0.TriggerPolarity=DMA_TRIG_POLARITY_MASKED
+Linkedlist.MDMA_Channel0.Request0=GP_SW
+Linkedlist.MDMA_Channel0.RequestsNb=1
+Linkedlist.RequestSet0=MDMA_Channel0
+Linkedlist.RequestSetsNb=1
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32U575ZIT6Q
@@ -28,73 +48,75 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=RCC
-Mcu.IP11=SPI2
-Mcu.IP12=SYS
-Mcu.IP13=TIM2
-Mcu.IP14=TIM3
-Mcu.IP15=UCPD1
-Mcu.IP16=USART1
-Mcu.IP17=USB_OTG_FS
+Mcu.IP10=PWR
+Mcu.IP11=RCC
+Mcu.IP12=SPI2
+Mcu.IP13=SYS
+Mcu.IP14=TIM2
+Mcu.IP15=TIM3
+Mcu.IP16=UCPD1
+Mcu.IP17=USART1
+Mcu.IP18=USB_OTG_FS
 Mcu.IP2=DEBUG
 Mcu.IP3=GPDMA1
 Mcu.IP4=ICACHE
-Mcu.IP5=LPBAM
-Mcu.IP6=LPBAMQUEUE
-Mcu.IP7=MEMORYMAP
-Mcu.IP8=NVIC
-Mcu.IP9=PWR
-Mcu.IPNb=18
+Mcu.IP5=LINKEDLIST
+Mcu.IP6=LPBAM
+Mcu.IP7=LPBAMQUEUE
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NVIC
+Mcu.IPNb=19
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PF13
-Mcu.Pin13=PF14
-Mcu.Pin14=PF15
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PD10
-Mcu.Pin19=PD11
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PF13
+Mcu.Pin14=PF14
+Mcu.Pin15=PF15
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PD10
 Mcu.Pin2=PE5
-Mcu.Pin20=PD12
-Mcu.Pin21=PD13
-Mcu.Pin22=PG2
-Mcu.Pin23=PC7
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13 (JTMS/SWDIO)
-Mcu.Pin29=PA14 (JTCK/SWCLK)
+Mcu.Pin20=PD11
+Mcu.Pin21=PD12
+Mcu.Pin22=PD13
+Mcu.Pin23=PG2
+Mcu.Pin24=PC7
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13 (JTMS/SWDIO)
 Mcu.Pin3=PE6
-Mcu.Pin30=PA15 (JTDI)
-Mcu.Pin31=PD3
-Mcu.Pin32=PB3 (JTDO/TRACESWO)
-Mcu.Pin33=PB5
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin36=VP_ICACHE_VS_ICACHE
-Mcu.Pin37=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin38=VP_PWR_VS_DBSignals
-Mcu.Pin39=VP_PWR_VS_SECSignals
+Mcu.Pin30=PA14 (JTCK/SWCLK)
+Mcu.Pin31=PA15 (JTDI)
+Mcu.Pin32=PD3
+Mcu.Pin33=PB3 (JTDO/TRACESWO)
+Mcu.Pin34=PB5
+Mcu.Pin35=PB7
+Mcu.Pin36=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin37=VP_ICACHE_VS_ICACHE
+Mcu.Pin38=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin39=VP_PWR_VS_DBSignals
 Mcu.Pin4=PC14-OSC32_IN (PC14)
-Mcu.Pin40=VP_PWR_VS_LPOM
-Mcu.Pin41=VP_PWR_Vdda
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin44=VP_LPBAM_VS_SIG1
-Mcu.Pin45=VP_LPBAM_VS_SIG4
-Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_PWR_VS_SECSignals
+Mcu.Pin41=VP_PWR_VS_LPOM
+Mcu.Pin42=VP_PWR_Vdda
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin45=VP_LPBAM_VS_SIG1
+Mcu.Pin46=VP_LPBAM_VS_SIG4
+Mcu.Pin47=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PA0
-Mcu.Pin9=PA1
-Mcu.PinsNb=47
+Mcu.Pin6=PF4
+Mcu.Pin7=PC1
+Mcu.Pin8=PC2
+Mcu.Pin9=PA0
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -258,6 +280,11 @@ PF15.GPIOParameters=GPIO_Label
 PF15.GPIO_Label=LDR4IN
 PF15.Locked=true
 PF15.Signal=GPXTI15
+PF4.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PF4.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PF4.GPIO_PuPd=GPIO_PULLUP
+PF4.Locked=true
+PF4.Signal=GPXTI4
 PG2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG2.GPIO_Label=LED_RED
 PG2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -299,7 +326,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,9-MX_TIM2_Init-TIM2-false-LL-true,10-MX_ADC1_Init-ADC1-false-LL-true,11-MX_SPI2_Init-SPI2-false-LL-true,12-MX_TIM3_Init-TIM3-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,9-MX_TIM2_Init-TIM2-false-LL-true,10-MX_ADC1_Init-ADC1-false-LL-true,11-MX_SPI2_Init-SPI2-false-LL-true,12-MX_TIM3_Init-TIM3-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -372,6 +399,8 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
@@ -412,7 +441,7 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Mode=LINKEDLIST_GPDMACH0
 VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
