Mid-fix of LED drivr

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -9,9 +9,10 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPDMA1.IPParameters=LINKALLOCATEDPORT_GPDMACH0,LINKEDLISTMODE_GPDMACH0
+GPDMA1.IPParameters=LINKALLOCATEDPORT_GPDMACH0,LINKEDLISTMODE_GPDMACH0,TRANSFEREVENTMODE_LL_GPDMACH0
 GPDMA1.LINKALLOCATEDPORT_GPDMACH0=DMA_LINK_ALLOCATED_PORT0
 GPDMA1.LINKEDLISTMODE_GPDMACH0=DMA_LINKEDLIST_CIRCULAR
+GPDMA1.TRANSFEREVENTMODE_LL_GPDMACH0=DMA_TCEM_EACH_LL_ITEM_TRANSFER
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Linkedlist.MDMA_Channel0.GP_SW.0.BlkHWRequest=DMA_BREQ_SINGLE_BURST
