Functioning LED driver

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -12,11 +12,11 @@ File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH0=DISABLE
 GPDMA1.DATAHANDLING_GPDMACH0=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
-GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_MEMORY
-GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=IPHANDLE
+GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
 GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,DATAHANDLING_GPDMACH0
 GPDMA1.LINKALLOCATEDPORT_CIRCULAR_GPDMACH0=DMA_LINK_ALLOCATED_PORT1
-GPDMA1.REQUEST_GPDMACH0=DMA_REQUEST_SW
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
 GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_BYTE
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
 GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
@@ -34,9 +34,11 @@ Mcu.IP11=SPI2
 Mcu.IP12=SYS
 Mcu.IP13=TIM2
 Mcu.IP14=TIM3
-Mcu.IP15=UCPD1
-Mcu.IP16=USART1
-Mcu.IP17=USB_OTG_FS
+Mcu.IP15=TIM6
+Mcu.IP16=TIM7
+Mcu.IP17=UCPD1
+Mcu.IP18=USART1
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=DEBUG
 Mcu.IP3=GPDMA1
 Mcu.IP4=ICACHE
@@ -45,7 +47,7 @@ Mcu.IP6=LPBAMQUEUE
 Mcu.IP7=MEMORYMAP
 Mcu.IP8=NVIC
 Mcu.IP9=PWR
-Mcu.IPNb=18
+Mcu.IPNb=20
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
@@ -87,15 +89,17 @@ Mcu.Pin40=VP_PWR_VS_LPOM
 Mcu.Pin41=VP_PWR_Vdda
 Mcu.Pin42=VP_SYS_VS_Systick
 Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin44=VP_LPBAM_VS_SIG1
-Mcu.Pin45=VP_LPBAM_VS_SIG4
-Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin44=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin46=VP_LPBAM_VS_SIG1
+Mcu.Pin47=VP_LPBAM_VS_SIG4
+Mcu.Pin48=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=47
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -117,7 +121,9 @@ NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:false
+NVIC.TIM6_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=LED1OUT
@@ -300,7 +306,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,9-MX_TIM2_Init-TIM2-false-LL-true,10-MX_ADC1_Init-ADC1-false-LL-true,11-MX_SPI2_Init-SPI2-false-LL-true,12-MX_TIM3_Init-TIM3-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,9-MX_TIM2_Init-TIM2-false-LL-true,10-MX_ADC1_Init-ADC1-false-LL-true,11-MX_SPI2_Init-SPI2-false-LL-true,12-MX_TIM3_Init-TIM3-false-LL-true,13-MX_TIM6_Init-TIM6-false-LL-true,14-MX_TIM7_Init-TIM7-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -409,6 +415,12 @@ TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=8
 TIM3.IC2Filter=8
 TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter
+TIM6.IPParameters=Prescaler,PeriodNoDither
+TIM6.PeriodNoDither=9
+TIM6.Prescaler=15999
+TIM7.IPParameters=Prescaler,PeriodNoDither
+TIM7.PeriodNoDither=9
+TIM7.Prescaler=15999
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -437,6 +449,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-U575ZI-Q
 boardIOC=true
 isbadioc=false
