--- a/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -4,15 +4,16 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
-GPDMA1.DATAHANDLING_GPDMACH0=NONE
+GPDMA1.CIRCULARMODE_GPDMACH0=DISABLE
+GPDMA1.DATAHANDLING_GPDMACH0=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0,TRIGGERPOLARITY_GPDMACH0
+GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0,TRIGGERPOLARITY_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
-GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
+GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_BYTE
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
 GPDMA1.TRIGGERPOLARITY_GPDMACH0=DMA_TRIG_POLARITY_MASKED
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -27,6 +28,8 @@ Mcu.IP10=SPI2
 Mcu.IP11=SYS
 Mcu.IP12=TIM2
 Mcu.IP13=TIM3
+Mcu.IP14=TIM6
+Mcu.IP15=TIM7
 Mcu.IP2=GPDMA1
 Mcu.IP3=ICACHE
 Mcu.IP4=LPBAM
@@ -35,7 +38,7 @@ Mcu.IP6=MEMORYMAP
 Mcu.IP7=NVIC
 Mcu.IP8=PWR
 Mcu.IP9=RCC
-Mcu.IPNb=14
+Mcu.IPNb=16
 Mcu.Name=STM32U585VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -120,11 +123,13 @@ Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin80=VP_PWR_VS_SECSignals
 Mcu.Pin81=VP_SYS_VS_Systick
 Mcu.Pin82=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin83=VP_LPBAM_VS_SIG1
-Mcu.Pin84=VP_LPBAM_VS_SIG4
-Mcu.Pin85=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin83=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin84=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin85=VP_LPBAM_VS_SIG1
+Mcu.Pin86=VP_LPBAM_VS_SIG4
+Mcu.Pin87=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin9=PC0
-Mcu.PinsNb=86
+Mcu.PinsNb=88
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U585VITx
@@ -146,6 +151,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=LED1OUT
@@ -482,7 +489,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,7-MX_TIM3_Init-TIM3-false-LL-true,8-MX_TIM2_Init-TIM2-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,7-MX_TIM3_Init-TIM3-false-LL-true,8-MX_TIM2_Init-TIM2-false-LL-true,9-MX_TIM6_Init-TIM6-false-LL-true,10-MX_TIM7_Init-TIM7-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -576,8 +583,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI2.CalculateBaudRate=5.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI2.CalculateBaudRate=10.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
@@ -594,6 +601,12 @@ TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=8
 TIM3.IC2Filter=8
 TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter
+TIM6.IPParameters=Prescaler,PeriodNoDither
+TIM6.PeriodNoDither=9
+TIM6.Prescaler=15999
+TIM7.IPParameters=Prescaler,PeriodNoDither
+TIM7.PeriodNoDither=9
+TIM7.Prescaler=15999
 VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
 VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
@@ -612,5 +625,9 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 isbadioc=false
