Encoder driver with test code, lower SPI baud rate for stability

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -245,8 +245,10 @@ PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=ENCODER_B
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Signal=S_TIM3_CH2
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=ENCODER_SW
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
 PE6.GPIOParameters=GPIO_Label
@@ -395,8 +397,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI2.CalculateBaudRate=10.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=5.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
