--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -54,52 +54,56 @@ Mcu.Pin0=PE3
 Mcu.Pin1=PE4
 Mcu.Pin10=PA2
 Mcu.Pin11=PA3
-Mcu.Pin12=PF13
-Mcu.Pin13=PF14
-Mcu.Pin14=PF15
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PD10
-Mcu.Pin19=PD11
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PB13
 Mcu.Pin2=PE5
-Mcu.Pin20=PD12
-Mcu.Pin21=PD13
-Mcu.Pin22=PG2
-Mcu.Pin23=PC7
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13 (JTMS/SWDIO)
-Mcu.Pin29=PA14 (JTCK/SWCLK)
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PD10
+Mcu.Pin23=PD11
+Mcu.Pin24=PD12
+Mcu.Pin25=PD13
+Mcu.Pin26=PG2
+Mcu.Pin27=PC7
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PE6
-Mcu.Pin30=PA15 (JTDI)
-Mcu.Pin31=PD3
-Mcu.Pin32=PB3 (JTDO/TRACESWO)
-Mcu.Pin33=PB5
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin36=VP_ICACHE_VS_ICACHE
-Mcu.Pin37=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin38=VP_PWR_VS_DBSignals
-Mcu.Pin39=VP_PWR_VS_SECSignals
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13 (JTMS/SWDIO)
+Mcu.Pin33=PA14 (JTCK/SWCLK)
+Mcu.Pin34=PA15 (JTDI)
+Mcu.Pin35=PD3
+Mcu.Pin36=PB3 (JTDO/TRACESWO)
+Mcu.Pin37=PB5
+Mcu.Pin38=PB7
+Mcu.Pin39=VP_GPDMA1_VS_GPDMACH0
 Mcu.Pin4=PC14-OSC32_IN (PC14)
-Mcu.Pin40=VP_PWR_VS_LPOM
-Mcu.Pin41=VP_PWR_Vdda
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin46=VP_LPBAM_VS_SIG1
-Mcu.Pin47=VP_LPBAM_VS_SIG4
-Mcu.Pin48=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_ICACHE_VS_ICACHE
+Mcu.Pin41=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin42=VP_PWR_VS_DBSignals
+Mcu.Pin43=VP_PWR_VS_SECSignals
+Mcu.Pin44=VP_PWR_VS_LPOM
+Mcu.Pin45=VP_PWR_Vdda
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
+Mcu.Pin50=VP_LPBAM_VS_SIG1
+Mcu.Pin51=VP_LPBAM_VS_SIG4
+Mcu.Pin52=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=49
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -167,6 +171,22 @@ PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LED4OUT
 PA3.Signal=S_TIM2_CH4
+PA4.GPIOParameters=GPIO_PuPd
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=USART1_TX
 PA9.GPIO_PuPd=GPIO_PULLDOWN
