Relay output pin

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -531,41 +531,42 @@ Mcu.Pin22=PD10
 Mcu.Pin23=PD11
 Mcu.Pin24=PD12
 Mcu.Pin25=PD13
-Mcu.Pin26=PG2
-Mcu.Pin27=PC7
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin26=PD14
+Mcu.Pin27=PG2
+Mcu.Pin28=PC7
+Mcu.Pin29=PA9
 Mcu.Pin3=PE6
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13 (JTMS/SWDIO)
-Mcu.Pin33=PA14 (JTCK/SWCLK)
-Mcu.Pin34=PA15 (JTDI)
-Mcu.Pin35=PD3
-Mcu.Pin36=PB3 (JTDO/TRACESWO)
-Mcu.Pin37=PB5
-Mcu.Pin38=PB7
-Mcu.Pin39=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13 (JTMS/SWDIO)
+Mcu.Pin34=PA14 (JTCK/SWCLK)
+Mcu.Pin35=PA15 (JTDI)
+Mcu.Pin36=PD3
+Mcu.Pin37=PB3 (JTDO/TRACESWO)
+Mcu.Pin38=PB5
+Mcu.Pin39=PB7
 Mcu.Pin4=PC14-OSC32_IN (PC14)
-Mcu.Pin40=VP_ICACHE_VS_ICACHE
-Mcu.Pin41=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin42=VP_PWR_VS_DBSignals
-Mcu.Pin43=VP_PWR_VS_SECSignals
-Mcu.Pin44=VP_PWR_VS_LPOM
-Mcu.Pin45=VP_PWR_Vdda
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin41=VP_ICACHE_VS_ICACHE
+Mcu.Pin42=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin43=VP_PWR_VS_DBSignals
+Mcu.Pin44=VP_PWR_VS_SECSignals
+Mcu.Pin45=VP_PWR_VS_LPOM
+Mcu.Pin46=VP_PWR_Vdda
+Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
-Mcu.Pin50=VP_LPBAM_VS_SIG1
-Mcu.Pin51=VP_LPBAM_VS_SIG4
-Mcu.Pin52=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin51=VP_LPBAM_VS_SIG1
+Mcu.Pin52=VP_LPBAM_VS_SIG4
+Mcu.Pin53=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=53
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -717,6 +718,8 @@ PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=OLEDRES
 PD13.Locked=true
 PD13.Signal=GPIO_Output
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD3.Mode=Full_Duplex_Master
 PD3.Signal=SPI2_MISO
 PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
